<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_rxjava_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txt_rxjava_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            tools:text="RxJava test" />

        <CheckBox
            android:id="@+id/cb_on_network_subject01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="NetworkSubject01"
            android:layout_marginTop="30dp"/>

        <CheckBox
            android:id="@+id/cb_on_network_subject02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="NetworkSubject02" />

        <CheckBox
            android:id="@+id/cb_on_network_subject03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="NetworkSubject03" />

        <TextView
            android:id="@+id/txt_combine_latest_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            tools:text="CombineLatest test" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>