<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_retrofit_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Retrofit test" />

        <Button
            android:id="@+id/btn_rxpermission_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="RxPermission test" />

        <Button
            android:id="@+id/btn_rxjava_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="RxJava test" />

        <Button
            android:id="@+id/btn_flow_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Flow test" />

        <Button
            android:id="@+id/btn_work_manager_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="WorkManager test" />

        <Button
            android:id="@+id/btn_realm_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Realm test" />

        <Button
            android:id="@+id/btn_room_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Room test" />

        <Button
            android:id="@+id/btn_dynamic_link_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dynamic link test" />

        <Button
            android:id="@+id/btn_theme_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Theme test" />

        <Button
            android:id="@+id/btn_remote_config_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Remote config test" />

        <Button
            android:id="@+id/btn_ab_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="a/b test" />

        <Button
            android:id="@+id/btn_ui_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ui test" />

        <Button
            android:id="@+id/btn_webview_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="webview test" />

        <Button
            android:id="@+id/btn_bottom_sheet_fragment_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="bottom sheet fragment test" />

        <Button
            android:id="@+id/btn_vertical_seekbar_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="vertical seekbar test" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>